Testing full CI/CD automation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-<h1>🚀 DevOps CI/CD Pipeline Working!</h1>
+<h1>🚀 DevOps Pipeline Auto Deploy Working!</h1>
+
 <p>This site is deployed using GitHub Actions + Netlify + ChatOps.</p>
 
 </body>
